<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Draw It</string>
    <string name="menu_settings">Settings</string>
	<string name="Menu">Menu</string>
	<string name="Clear">Clear</string>
	<string name="Red">Red</string>
	<string name="Blue">Blue</string>
	<string name="Green">Green</string>
	<string name="Black">Black</string>
	<string name="Save">Save</string>
	<string name="Colors">Colors</string>
	<string name="Submit">Submit</string>
</resources>